--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
     <div class="container">
       <div class="first__section"></div>
       <div class="second__section">
+        <div style="display: none" class="submit__success">
+          <img
+            class="icon__complete"
+            src="./images/icon-complete.svg"
+            alt="complete icon"
+          />
+          <h2 class="complete__heading">Thank you!</h2>
+          <p class="complete__sub-heading">We've added your card details</p>
+          <button class="btn btn__complete">Continue</button>
+        </div>
         <form class="form">
           <div class="row">
             <div class="col-100">
@@ -107,9 +117,7 @@
 
     <!-- Completed state start -->
 
-    <!-- Thank you!
-  We've added your card details
-  Continue
+    <!-- 
    -->
     <!-- <div class="attribution">
       Challenge by
@@ -117,5 +125,21 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div> -->
+    <script>
+      const submit = document.querySelector(".btn__submit");
+      const form = document.querySelector("form");
+      const continueBtn = document.querySelector(".btn__complete");
+      const thankYou = document.querySelector(".submit__success");
+      submit.addEventListener("click", () => {
+        event.preventDefault();
+        form.style.display = "none";
+        thankYou.style.display = "block";
+      });
+      continueBtn.addEventListener("click", () => {
+        event.preventDefault();
+        thankYou.style.display = "none";
+        form.style.display = "block";
+      });
+    </script>
   </body>
 </html>
